books/projects/rac/tests/yaml_test/program_structure/assign_as_function_parameter.cpp
// RAC begin

int foo(int a = 3) {
  return 0;
}
